# ege

./: CMakeLists.txt  README.md  main.cxx  main.ipynb  main.py  requirements.txt  setup.py  utils.py
cython/: main.ipynb
lib/: __init__.py  bandits.cpp  bandits.pxd  bandits.pyx  policies.cpp  policies.pxd  policies.pyx
lib/utils/: __init__.py  utils.pxd  utils.pyx
src/cpp/: bandits.cxx  bandits.hpp  policies.cxx  policies.hpp  utils.cxx  utils.hpp
